--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "dom-helpers": "^2.4.0",
     "foundation-sites": "^6.2.1",
     "lodash": "^4.12.0",
-    "react-overlays": "^0.6.3",
+    "react-overlays": "0.6.4",
     "react-prop-types": "^0.3.2",
     "uncontrollable": "^3.3.1",
     "underscore.string": "^3.3.4"
