--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-foundation-components",
-  "version": "0.11.3",
+  "version": "0.12.1",
   "description": "Foundation Sites components built with the power of React and CSS Modules",
   "main": "lib/index.js",
   "files": [
@@ -8,6 +8,7 @@
   ],
   "scripts": {
     "clean": "rimraf lib docs/lib",
+    "preinstall": "npm run build",
     "lint": "eslint src && eslint docs && eslint examples && sass-lint --verbose",
     "build": "npm run clean && babel --quiet src --out-dir lib && cpy \"**/*.scss\" ../lib --parents --cwd=src && node create-flex-components.js && node create-global-scoped-components.js",
     "build-docs": "npm run clean && npm run build && webpack --config docs/webpack.config.js",
